# LinguaLink

./: .gitignore  DLP Project Report.docx  README.md
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/routes/: roomRoutes.ts  socket.ts
backend/src/utils/: log.ts
frontend/: .env  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/chat/[roomId]/: page.tsx
frontend/src/components/Chat/: ChatAudio.tsx  ChatBody.tsx  ChatFooter.tsx
frontend/src/components/Home/: Footer.tsx  LoginForm.tsx  Navbar.tsx
frontend/src/components/Room/: AddRoomPanel.tsx  RoomCard.tsx
frontend/src/interfaces/: IMessage.ts
m1/: ori.txt
m2/: hin2eng1.h5  hin2eng2.h5  t1.py  translate.py  urd.txt
model/: MachineTranslation.py  char2encoding.pkl  decoder_modelPredTranslation.h5  encoder_modelPredTranslation.h5  pyproject.toml
model/model/: MachineTranslation.py  main.py
