[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["MohammadYehya <mohammad7446@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow-io-gcs-filesystem = "0.27.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
tensorflow = "~2.10"
keras = "~2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
