[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["MohammadYehya <mohammad7446@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.16.1"
tensorflow-intel = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
